lesson2/styles/l2-small.css
body {
    font-size: 12px;
    line-height: 1.5;
    background-color: #303030;
}

header,
nav,
main,
footer {
    margin: 1.25rem auto;
    max-width: 800px;
}

header {
    padding: 1.5rem;
    display: grid;
    grid-template-rows: 80% 20%;
    align-items: center;
    justify-items: center;
}

header,
footer {
    background-color: green;
    color: #e8eaed;
    text-align: center;
}

footer {
    padding: 0.5rem 1.5rem;
}

h1 {
    font-family: 'Bungee Spice', sans-serif;
    font-size: 2.25rem;
}

h2 {
    font-size: 1.75rem;
    margin: 0rem 1rem 1.25rem 1rem;
}

h2,
h3,
h4 {
    font-family: 'Cairo', sans-serif;
    color: white;
}

p {
    font-family: 'Roboto Condensed', sans-serif;
    color: #e8eaed;
}

a {
    color: #C44900;
}

#card-container {
    display: grid;
    grid-template-columns: 100%;
}

.card {
    margin: 1em 1em;
    padding: 0;
    border: 1px solid #e8eaed;
    display: grid;
    grid-template-columns: 100%;
    grid-template-rows: min-content min-content min-content min-content min-content;
    /* grid-template-rows: auto auto auto auto auto; */
}

.card h3,
.card h4,
.card p {
    margin: 0;
    /* padding: 0 1rem 0 1rem; */
    padding: 1rem 1rem 1rem 1rem;
}

.card h3 {
    background-color: #4F5D75;
    font-size: 2.5rem;
    padding: 1rem 1rem;
}

.card h4 {
    font-size: 1.75rem;
    color: #e8eaed;
    padding: 1rem 1rem 0rem 1rem;
}

.card p {
    font-size: 1.45rem;
    padding: .25rem 1rem 1rem 1rem;
}

.card img {
    max-width: 100%;
    height: auto;
    justify-self: stretch;
    padding: 1.5rem 0.5rem 1.75rem 0.5rem;
}

